[package]
edition = "2021"
name = "git_statistic"
version = "0.1.0"
description = "A simple tool to statistic git repository."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "git_statistic"
path = "src/git_statistic.rs"

[dependencies]
clap = "4.4.8"
regex = "1.10.2"
tokio = {version = "1.34.0", features = ["full"]}
